Chrome browser updated.

--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
                 <!--<include>**/RunTest.java</include>-->
               <!--</includes>-->
               <systemPropertyVariables>
-                <BrowserType>Firefox</BrowserType>
+                <BrowserType>Chrome</BrowserType>
               </systemPropertyVariables>
             </configuration>
           </plugin>
