--- a/src/test/resources/project.properties
+++ b/src/test/resources/project.properties
@@ -1,4 +1,4 @@
 login.username=bothees@gmail.com
-login.password=Iniya2012
+login.password=Autotest2018
 login.url=https://www.moneysupermarket.com/my-account/sign-in/?redirect_uri=%2Fmy-profile.your-history.all-products%2F
 browser=chrome
